# chess-ai

./: .gitignore  CMakeLists.txt  README.md
include/ai/: Engine.h  Evaluator.h
include/core/: Board.h  Move.h  MoveGenerator.h  MoveValidator.h  Piece.h  Position.h  Types.h
include/ui/: ChessBoard.h  MainWindow.h  PieceWidget.h
src/: main.cpp
src/ai/: Engine.cpp  Evaluator.cpp
src/core/: Board.cpp  Move.cpp  MoveGenerator.cpp  MoveValidator.cpp  Piece.cpp  Position.cpp
src/ui/: ChessBoard.cpp  MainWindow.cpp  PieceWidget.cpp
